--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ test = [
   "pytest-cov>=5",
   "coverage[toml]>=7.5",
   "hypothesis>=6.100",
-  "ruff>=0.4",
+  "ruff>=0.11",
   "pre-commit>=3.7",
   "scipy"
 ]
@@ -61,3 +61,6 @@ python = "3.12"
 test = "pytest -q"
 cov  = "pytest"
 fmt  = "ruff check --fix coords_nsga2 tests"
+
+[tool.ruff]
+extend-exclude = ["examples"]
