change python version to 3.9

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,8 @@ name: test
 on: [push, pull_request]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
     steps:
       # 1. 拉取代码
       - uses: actions/checkout@v4
@@ -15,7 +12,7 @@ jobs:
       # 2. 安装符合 pyproject.toml 中声明版本的 Python
       - uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.9'
           cache: pip
 
       # 3. 安装 Hatch（只需要几秒）
