Add comprehensive documentation for coords-nsga2 library
- Introduced a new examples.md file containing various usage examples, including basic and advanced optimization scenarios.
- Enhanced index.md with an overview, key features, application scenarios, and system requirements.
- Created index_en.md for English documentation, mirroring the structure of the Chinese version.
- Expanded install.md with detailed installation instructions, including system requirements, installation from PyPI, source, and verification steps.
- Updated usage.md to provide a thorough guide on basic concepts, quick start examples, region definitions, objective function and constraint definitions, optimizer parameters, result analysis, and save/load functionality.
- Improved mkdocs.yml for better navigation and added features for enhanced user experience.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,13 +16,34 @@ theme:
       toggle:
         icon: material/weather-sunny
         name: 切换到浅色模式
+  features:
+    - navigation.tabs
+    - navigation.tabs.sticky
+    # - navigation.sections
+    # - navigation.expand
+    - navigation.top
+    - search.highlight
+    - content.code.copy
 nav:
   - 首页: index.md
-  - 安装: install.md
+  - 安装指南: install.md
   - 使用指南: usage.md
+  - API参考: api.md
+  - 示例代码: examples.md
 
 markdown_extensions:
   - pymdownx.highlight:
       linenums: true
       anchor_linenums: true
   - pymdownx.superfences
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.smartsymbols
+  - admonition
+  - codehilite
+  - meta
+  - toc:
+      permalink: true
