--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ authors = [
 dependencies = [
     "numpy>=1.23",
     "tqdm>=4",
-    "shapely>=2"
+    "shapely>=2",
+    "matplotlib"
 ]
 requires-python = ">= 3.9"
 readme = { file = "README.md", content-type = "text/markdown" }
