--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,22 @@ requires-python = ">= 3.9"
 readme = { file = "README.md", content-type = "text/markdown" }
 license = {text = "MIT"}
 keywords = ['optimization',"nsga2","coordinates","genetic-algorithm"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Science/Research",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Scientific/Engineering",
+    "Topic :: Scientific/Engineering :: Mathematics",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Operating System :: OS Independent"
+]
 
 [project.urls]
 Homepage = "https://github.com/ZXF1001/coords-nsga2"
@@ -36,7 +52,13 @@ test = [
   "hypothesis>=6.100",
   "ruff>=0.11",
   "pre-commit>=3.7",
-  "scipy"
+  "scipy",
+  "pre-commit"
+]
+docs = [
+  "mkdocs",
+  "mkdocs-material",
+  "mkdocs-static-i18n"
 ]
 
 # pytest 相关
