--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "matplotlib",
     "joblib>=1.5.0"
 ]
-requires-python = ">= 3.9"
+requires-python = ">= 3.8"
 readme = { file = "README.md", content-type = "text/markdown" }
 license = {text = "MIT"}
 keywords = ['optimization',"nsga2","coordinates","genetic-algorithm"]
@@ -26,6 +26,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
