--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,13 +19,13 @@ dependencies = [
 ]
 requires-python = ">= 3.8"
 readme = { file = "README.md", content-type = "text/markdown" }
-license = {text = "MIT"}
+license = "Apache-2.0"
 keywords = ['optimization',"nsga2","coordinates","genetic-algorithm"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
